# invoice-desk-server

./: .env  CMakeLists.txt  Cargo.toml  README.md
diagrams/: db.mysql
src/: main.cpp  main.rs
src/controllers/invoice-controller/: invoice-controller.cpp  invoice-controller.hpp
src/env/: env.cpp  env.hpp
